--- a/gb/25/7/15/n14551612.md
+++ b/gb/25/7/15/n14551612.md
@@ -7,39 +7,40 @@
 <hr>
 	<p>【大纪元2025年07月15日讯】（大纪元记者刘景烨编译报导）麻州剑桥市（Cambridge）即将拆除一栋大型公寓楼，从7月19日开始封闭两条主要道路，并将导致两趟公共巴士绕道行驶。</p>
 <p>据剑桥市政府网站信息，位于“221 Mount Auburn Street”的“河景公寓”（Riverview Condominiums）9层住房在2023年2月被发现存在结构缺陷。该建筑并未按照原始设计方案建造，而该公寓管理协会认为无法修复建筑，因此需要拆除。这栋建筑靠近Mt. Auburn医院。</p>
-<figure id="attachment_14551617" aria-describedby="caption-attachment-14551617" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14551617-02d24b6cc71acf86cefa156fcf2bce64.jpg"><img decoding="async" class="size-large wp-image-14551617" src="https://i.epochtimes.com/assets/uploads/2025/07/id14551617-02d24b6cc71acf86cefa156fcf2bce64-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14551617" class="wp-caption-text">麻州剑桥市（Cambridge）“河景公寓”（Riverview Condominiums）被判定为危楼，需要拆除，工程从7月开始。（苏仪/大纪元）</figcaption></figure>
+<figure id="attachment_14551617" aria-describedby="caption-attachment-14551617" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/07/id14551617-02d24b6cc71acf86cefa156fcf2bce64.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14551617" src="https://i.epochtimes.com/assets/uploads/2025/07/id14551617-02d24b6cc71acf86cefa156fcf2bce64-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14551617" class="wp-caption-text">麻州剑桥市（Cambridge）“河景公寓”（Riverview Condominiums）被判定为危楼，需要拆除，工程从7月开始。（苏仪/大纪元）</figcaption></figure>
 <p>为配合工程，从7月19日开始，靠近该楼的Mount Auburn Street和Sparks Street将封闭，Channing Street将改成南向单向通行道路，同时Lowell Street和Willard Street将改成北向单向通行道路。MBTA巴士71号和73号因此将改道行驶。</p>
 <p>剑桥市检查服务部已于6月批准拆除该建筑。市政府代表谈到，这次拆除项目，需要8周时间进行工程调查和申请许可，接下来需要12到16周时间实施拆除工作。</p>
 <p>2024年11月，该建筑的所有居民都已搬走。邻近的另一栋14单元住宅楼的居民，也于上个月离开。</p>
 <p>在7月10日的公共会议中，剑桥市政府代表表示，河景公寓的混凝土结构，未能达到设计的强度，而且存在渗漏和偏移问题。不过，公寓管理协会表示，该楼已存在60多年，而上述问题一直未被发现。◇</p>
 <p>责任编辑：冯文鸾</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580683.md#1">《霹雳火》演员秦杨张凤书 隔20年同台再交锋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580638.md#1">全球OTT颁奖 台明星云集 林廷忆摘最佳新人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580623.md#1">贝克汉一家乘坐高价游艇游意大利 次子晒度假照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580541.md#1">金钟60主持 Lulu接节目类 曾宝仪负责戏剧类</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11246440.md#1" target="_blank">中国维权律师彭永峰修炼法轮功 见证神奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/23/n10659446.md#1">节气“处暑”是什么意思？ 处暑出伏中元添福！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4592934.md#1">潜龙隐迹辽东郡 名士风流厉冰雪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579766.md#1">【未解之谜】考古还是盗墓？开挖皇陵 诡异事件频现</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/8/n14569774.md#1">【古道人生】女子忍辱负重为夫家保后代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/21/n14578146.md#1">一片叶落，是风的无情或树的无心还是叶子本身的无意?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580914.md#1">【新闻大破解】俄乌和谈五方博弈 联动台海</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/5/n13697943.md#1">【神韵原创音乐】2019 神韵交响乐《传神》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579508.md#1">亿万富翁不把钱存储蓄账户 他们放在哪里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579820.md#1">波音空客潜在订单泄漏商飞C919何种困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579804.md#1">在Costco买这六种商品 为何你或感到后悔</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/22/n14579291.md#1">成本超3000万 郭富城主演新片首日票房仅5万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579822.md#1">杨洋凭武打戏再翻红 自曝严重腿伤需终生复健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579431.md#1">犬青被评论“颜值忽高忽低” 云安急召歌迷喊话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579795.md#1">【漂流传奇】李尚正：从星爷配角到台柱主持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579837.md#1">遗书爆陆综平台分帐黑幕 28岁导演轻生未遂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/24/n14579978.md#1">为什么有些衣服洗了会缩水？ 如何挽救？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555466.md#1">【梁厨美食】清蒸大红石斑～蒸鱼技巧学起来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580580.md#1">为何你度假时应该把一枚硬币放在冰箱里？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571447.md#1">劝年长者放弃开车? 劝说要有技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/20/n14577575.md#1">生前赠与：提早帮助继承人 避免财产纠纷 实现双赢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651357.md#1">【音乐】《芬兰颂》作品第26号｜2023神韵交响乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646630.md#1">简单五步骤 自己也能迅速装上被套</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/7/15/n14551612.htm">剑桥市拆除危楼 7/19起封路 两巴士改道</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/7/15/n14551612.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
