--- a/gb/25/10/22/n14621176.md
+++ b/gb/25/10/22/n14621176.md
@@ -9,15 +9,14 @@
 <figure id="attachment_14621167" aria-describedby="caption-attachment-14621167" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621167-DSC03450.jpg"><img decoding="async" class="size-large wp-image-14621167" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621167-DSC03450-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621167" class="wp-caption-text">10月18日下午，波士顿明慧学校暨台湾华语文学习中心举办中秋节庆祝活动。（刘景烨/大纪元）</figcaption></figure>
 <figure id="attachment_14621164" aria-describedby="caption-attachment-14621164" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621164-DSC03437.jpg"><img decoding="async" class="size-large wp-image-14621164" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621164-DSC03437-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621164" class="wp-caption-text">校门外展示学校活动。（刘景烨/大纪元）</figcaption></figure>
 <h2><strong>欢度佳节 乐享音乐和美食</strong></h2>
-<p>当天在麻州剑桥市（Cambridge）的明慧学校驻地，TCML成人华语学生及其家人，以及课后班、周末班的学生和家长，总计30多人参加了庆祝活动。</p>
+<p>当天在麻州剑桥市（Cambridge）的明慧学校驻地，TCML成人华语学生及其家人，以及课后班、周末班的学生和家长，总计40多人参加了庆祝活动。</p>
 <p>明慧学校校长刘珊玲向大家表达热情欢迎。“这个节日是关于团聚、感恩和共享欢乐，我想最好的方式就是大家聚在一个社区，乐享音乐、文化、月饼、香茶。”她说。</p>
-<figure id="attachment_14621169" aria-describedby="caption-attachment-14621169" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621169-DSC03458.jpg"><img decoding="async" class="size-large wp-image-14621169" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621169-DSC03458-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621169" class="wp-caption-text">华语师生总计30多人参加。（刘景烨/大纪元）</figcaption></figure>
-<p>在波士顿地区颇有名气的古筝老师杨信宜，在弹奏古筝乐曲之余，还介绍了古筝的特性，以及曲目蕴含的历史和情感。目前在伯克利音乐学院就读的陈心明也表演了多首二胡乐曲。</p>
+<figure id="attachment_14621169" aria-describedby="caption-attachment-14621169" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621169-DSC03458.jpg"><img decoding="async" class="size-large wp-image-14621169" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621169-DSC03458-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621169" class="wp-caption-text">华语师生总计40多人参加。（刘景烨/大纪元）</figcaption></figure>
+<p>在波士顿地区颇有名气的古筝老师杨信宜，在弹奏古筝乐曲之余，还介绍了古筝的特性，以及曲目蕴含的历史和情感。现场也有二胡演奏，令观众拍手喝采。</p>
 <figure id="attachment_14621168" aria-describedby="caption-attachment-14621168" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621168-DSC03451.jpg"><img decoding="async" class="size-large wp-image-14621168" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621168-DSC03451-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621168" class="wp-caption-text">古筝老师杨信宜演奏乐曲。（刘景烨/大纪元）</figcaption></figure>
-<figure id="attachment_14621170" aria-describedby="caption-attachment-14621170" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621170-DSC03462.jpg"><img decoding="async" class="size-large wp-image-14621170" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621170-DSC03462-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621170" class="wp-caption-text">音乐学生陈心明演奏二胡乐曲。（刘景烨/大纪元）</figcaption></figure>
 <p>正心茶坊老板姜致远携带全套茶具到场，为大家冲泡台湾茶，表演并解释了从烫杯到闻香和品茶的整套功夫茶艺。大家品味过后，纷纷称赞他带来的正宗台湾轻焙乌龙茶。</p>
 <figure id="attachment_14621172" aria-describedby="caption-attachment-14621172" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621172-DSC03486.jpg"><img decoding="async" class="size-large wp-image-14621172" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621172-DSC03486-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621172" class="wp-caption-text">正心茶坊老板姜致远演示功夫茶艺。（刘景烨/大纪元）</figcaption></figure>
-<p>文艺节目之后，明慧学校还为大家提供了传统月饼、冰皮月饼，以及炒粉、卤蛋等美食。现场欢声笑语，非常热闹。</p>
+<p>文艺节目之后，明慧学校还为大家提供了传统月饼、冰皮月饼，以及台式炒米粉、卤蛋等美食。现场欢声笑语，非常热闹。</p>
 <figure id="attachment_14621173" aria-describedby="caption-attachment-14621173" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14621173-DSC03491.jpg"><img decoding="async" class="size-large wp-image-14621173" src="https://i.epochtimes.com/assets/uploads/2025/10/id14621173-DSC03491-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14621173" class="wp-caption-text">活动参与者们品味台湾乌龙茶。（刘景烨/大纪元）</figcaption></figure>
 <h2><strong>颁发TCML优良奖</strong></h2>
 <p>侨教中心主任高家富特地来到明慧学校，为校长刘珊玲颁发了台湾华语文学习中心优良奖，向校长及老师们表达感谢。</p>
@@ -36,28 +35,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/24/n14601488.md#1">新英格兰中文学校协会换届 重返美东协会</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14609726.md#1">悉尼法轮功举办中秋庆典 市议员盛赞</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/31/n10267172.md#1" target="_blank">许茹：迫害宗教或终止迫害 罗马皇帝不同命</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615939.md#1">执子之手 与子偕老 一个真实的爱情故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615054.md#1">哈德逊河画派：艺术与人生的知音</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616630.md#1">【未解之谜】藏地奇迹 揭开生命的真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14616439.md#1">【未解之谜】以哈和平只是开始？人类最后七年倒计时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619422.md#1">【未解之谜】天才科学家杨定一的灵性之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14621008.md#1">【军事情报局】多布罗皮利亚之战 俄军被分割包围</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620980.md#1">【纪元焦点】习去军权保留党职 张汪胡入常？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620986.md#1">【新闻大破解】内卷助长通缩 中国经济恐全面停滞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619781.md#1">中共四中全会开幕 专家：高层大改组遇难题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619316.md#1">于朦胧案冲击四中全会 退出中共大潮涌动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619516.md#1">中共四中全会前清洗军队 专家析背后因素</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/18/n14619148.md#1">舒淇主演新片《寻她》 大陆上映3小时即撤档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/18/n14619161.md#1">李亚鹏回应与海哈金喜离婚质疑 称真相更残忍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619177.md#1">何炅自曝出现衰老焦虑 状态大不如从前</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620317.md#1">汤唯睽违7年再拍剧 网传新剧与易烊千玺搭档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620277.md#1">刘嘉玲曝节目秘辛：梁朝伟让我少说话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619895.md#1">盆栽植物的叶子变黄怎么救？专家教你方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620519.md#1">飞机商务舱和头等舱有何差异？值得搭乘吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619709.md#1">7个容易被忽略的脑瘤征兆 看看你有没有</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620190.md#1">【美食天堂】虾馄饨汤～只需30分钟！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14619580.md#1">3款简单的烤吐司料理 早餐轻松搞定</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651357.md#1">【音乐】《芬兰颂》作品第26号｜2023神韵交响乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646630.md#1">简单五步骤 自己也能迅速装上被套</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/22/n14621176.htm">明慧学校TCML庆中秋 教育组介绍台湾奖学金</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621176.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
